--- a/css/global.css
+++ b/css/global.css
@@ -1,1 +1,28 @@
+p{margin: 10px 0;
+}
+
+form{
+    text-aling: center;
+}
+
+body{
+    background: gray;
+    font-family: Arial, sans-serif;
+    font-size: 16px;
+}
+
+h1{
+    text-align: center;
+    color: black;
+    font-size: 24px;
+}
+
+button{
+    background-color: #4caf50; /* verde */;
+    color: white;
+    padding: 10px 20px;
+    border: none;
+    border border-radius: 4px;
+    cursor: pointer;
+}
 
